Add PostArticle documentation
